--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
         <h2>Portfolio</h2>
         <div class="portfolio-grid">
             <div class="portfolio-item">
-                <h3>Project 1</h3>
-                <p>Brief description of the project.</p>
-                <a href="#">View Project</a>
+                <h3>Weather App</h3>
+                <p>A user-friendly weather application that provides real-time weather updates for any location. Features include current temperature, weather conditions with an intuitive and responsive interface.</p>
+                <a href="https://kravalii.github.io/Weather-App/">View Project</a>
             </div>
             <div class="portfolio-item">
                 <h3>Project 2</h3>
